src/layout/Home.css
.home {
  color: #ceeddb;
  font-family: "Play", sans-serif;
  animation: fadeIn linear 1s;
  display: flex;
  flex-direction: column;
  align-items: center;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.name {
  text-align: center;
}

.home ul {
  text-align: center;
  list-style: none;
  padding-left: 0px;
}

#title {
  font-size: 30px;
}
#name {
  font-size: 60px;
}

@media all and (max-width: 935px) {
  .home {
    height: 100vh;
  }
  #name {
    font-size: 55px;
  }
  #title {
    font-size: 25px;
  }
}

